# books-management

./: Dockerfile  compose.yaml
.github/workflows/: ci.yaml
backend/: Cargo.toml  Dockerfile  Makefile.toml
backend/adapter/: Cargo.toml
backend/adapter/migrations/: 20250216123625_start.up.sql
backend/adapter/src/database/: mod.rs
backend/adapter/src/database/model/: auth.rs  user.rs
backend/adapter/src/redis/: mod.rs
backend/adapter/src/repository/: auth.rs  book.rs  user.rs
backend/api/: Cargo.toml
backend/api/src/handler/: book.rs
backend/api/src/model/: book.rs  user.rs
backend/api/src/route/: book.rs  health.rs
backend/data/: initial_setup.sql
backend/kernel/: Cargo.toml
backend/kernel/src/model/: id.rs
backend/kernel/src/repository/: user.rs
backend/registry/: Cargo.toml
backend/registry/src/: lib.rs
backend/shared/: Cargo.toml
backend/shared/src/: error.rs
backend/src/: main.rs
frontend/: package-lock.json
