[package]
edition = "2021"
name = "books-manager"
version = "0.1.0"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["adapter", "api", "kernel", "registry", "shared"]

[workspace.dependencies]
adapter = {path = "./adapter"}
api = {path = "./api"}
kernel = {path = "./kernel"}
registry = {path = "./registry"}
shared = {path = "./shared"}

anyhow = "1.0.75"
axum = {version = "0.7.5", features = ["macros"]}
rstest = "0.18.2"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"]}
tokio = {version = "1.37.0", features = ["full"]}

[dependencies]
adapter.workspace = true
anyhow.workspace = true
api.workspace = true
axum.workspace = true
registry.workspace = true
shared.workspace = true
sqlx.workspace = true
tokio.workspace = true
