[package]
edition = "2021"
name = "books-manager"
version = "0.1.0"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["adapter", "api", "kernel", "registry", "shared"]

[workspace.dependencies]
adapter = {path = "./adapter"}
api = {path = "./api"}
kernel = {path = "./kernel"}
registry = {path = "./registry"}
shared = {path = "./shared"}

anyhow = "1.0.75"
async-trait = "0.1.74"
axum = {version = "0.7.5", features = ["macros"]}
derive-new = "0.6.0"
serde = {version = "1.0.174", features = ["derive"]}
sqlx = {version = "0.7.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"]}
thiserror = "1.0.44"
tokio = {version = "1.37.0", features = ["full"]}
uuid = {version = "1.4.0", features = ["v4", "serde"]}

rstest = "0.18.2"

[dependencies]
adapter.workspace = true
anyhow.workspace = true
api.workspace = true
async-trait.workspace = true
axum.workspace = true
registry.workspace = true
shared.workspace = true
sqlx.workspace = true
tokio.workspace = true
