[package]
edition.workspace = true
license.workspace = true
name = "kernel"
publish.workspace = true
version = "0.1.0"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derive-new.workspace = true
mockall.workspace = true
serde.workspace = true
shared.workspace = true
sqlx.workspace = true
strum.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
